<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="sign_in_before_you_start">Sign in before you start</string>
    <string name="sign_out">Sign out</string>
    <string name="administration">Administration</string>
    <string name="search_books">Search for books</string>
    <string name="title">Title</string>
    <string name="search">Search</string>
    <string name="author">Author: </string>
    <string name="app_name">ReadIt</string>
    <string name="add">Add</string>
    <string name="books">Books</string>
    <string name="details_account">Details account</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="subscription">Subscription</string>
    <string name="my_books">My books</string>
    <string name="rating">Rating</string>
    <string name="rent">Rent</string>
    <string name="googlepay_status_unavailable">Unfortunately, Google Pay is not available on this device.</string>
    <string name="payments_show_name">Successfully received payment data for %s!</string>
    <string name="returnn">Return</string>
    <string name="wishlist">Wishlist</string>
    <string name="send">Send</string>
    <string name="name">Name</string>
    <string name="county">County</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="number">Number</string>
    <string name="flat">Flat</string>
    <string name="stair">Stair</string>
    <string name="category">Category: </string>
    <string name="stock">Stock</string>
    <string name="wish_list">Wish list</string>
    <string name="reading">Reading</string>
    <string name="history">History</string>
    <string name="description">Description</string>
    <string name="more">Show more</string>
    <string name="delete_from_wish_list">Delete from wish list</string>
</resources>