<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_outline_24"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_administration"
            android:icon="@drawable/ic_baseline_admin_panel_settings_24"
            android:title="@string/administration" />

        <item
            android:id="@+id/nav_subscription"
            android:icon="@drawable/ic_baseline_payment_24"
            android:title="@string/subscription" />

        <item
            android:id="@+id/nav_my_books"
            android:icon="@drawable/ic_baseline_menu_book_24"
            android:title="@string/my_books" />

        <item
            android:id="@+id/nav_signOut"
            android:icon="@drawable/ic_baseline_log_out_new_24"
            android:title="@string/sign_out" />
    </group>

</menu>