<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_mirror"
    tools:context=".fragments.BookDetailsFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="70dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                app:cardBackgroundColor="@android:color/transparent"
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:elevation="4dp"
                android:paddingRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/poster"
                        android:layout_width="133dp"
                        android:layout_height="169dp"
                        android:layout_marginRight="5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.014"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.4"
                        tools:srcCompat="@tools:sample/avatars" />


                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginStart="150dp"
                        android:layout_marginRight="5dp"
                        android:autoSizeMaxTextSize="24dp"
                        android:autoSizeMinTextSize="16dp"
                        android:autoSizeTextType="uniform"
                        android:text="@string/title"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/poster"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.114" />

                    <TextView
                        android:id="@+id/author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="150dp"
                        android:text="@string/author"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/poster"
                        app:layout_constraintTop_toBottomOf="@+id/title"
                        app:layout_constraintVertical_bias="0.216" />

                    <TextView
                        android:id="@+id/author_value"
                        android:layout_width="142dp"
                        android:layout_height="38dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="5dp"
                        android:autoSizeMaxTextSize="12dp"
                        android:autoSizeMinTextSize="10dp"
                        android:autoSizeTextType="uniform"
                        android:text=""
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.491"
                        app:layout_constraintStart_toEndOf="@+id/author"
                        app:layout_constraintTop_toBottomOf="@+id/title"
                        app:layout_constraintVertical_bias="0.307" />

                    <TextView
                        android:id="@+id/category_lable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="150dp"
                        android:text="@string/category"
                        android:textColor="@color/black"
                        android:fontFamily="serif"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/poster"
                        app:layout_constraintTop_toBottomOf="@+id/author_value"
                        />

                    <TextView
                        android:id="@+id/category_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@color/black"
                        android:fontFamily="serif"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.26"
                        app:layout_constraintStart_toEndOf="@+id/category_lable"
                        app:layout_constraintTop_toBottomOf="@+id/author_value" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/description_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cardView"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="15dp"
                android:textColor="@color/black"
                android:fontFamily="serif"
                android:text="@string/description"
                android:padding="10dp"/>

            <Button
                android:id="@+id/rent_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description_value"
                android:layout_centerInParent="true"
                android:layout_marginBottom="70dp"
                android:text="@string/rent" />

            <CheckBox
                android:id="@+id/wishlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description_value"
                android:layout_marginLeft="40dp"
                android:layout_toRightOf="@id/rent_button"
                android:button="@drawable/selector_wishlist_item" />

        </RelativeLayout>

    </ScrollView>

</FrameLayout>